Fixing timeline icon not responsive

--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -2,116 +2,6 @@ ul {
   list-style-type: none;
 }
 
-.agenda-timeline-header{
-  margin-top:2%;
-}
-
 .timeline {
-  $default-blue: map-get($colors, default-blue);
-
-  margin: 30px 0 0 0;
   padding: 0;
-  position: relative;
-
-  &:before {
-    content: "";
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 10px;
-    background: silver;
-    left: 5%;
-    margin-left: -10px;
-  }
-  timeline-item {
-    position: relative;
-    display: inline-block;
-    width: 100% !important;
-
-    /* Right content */
-    ion-card {
-      margin-left: 0% !important;
-      width: calc(91% - 20px) !important;
-      position: relative;
-      ion-card-header {
-        padding-bottom: 0 !important;
-        color: $default-blue !important;
-      }
-    }
-
-    ion-icon {
-      width: 40px;
-      height: 40px;
-      font-size: 1.4em;
-      position: absolute;
-      color: #fff;
-      background: $default-blue;
-      border-radius: 50%;
-      text-align: center;
-      left: 5%;
-      top: 0;
-      margin: 0 0 0 -25px;
-      line-height: 40px;
-    }
-  }
-  @media screen and (max-width: map-get($grid-breakpoints,"lg")) {
-    timeline-item {
-      width: 100% !important;
-      timeline-time {
-        font-size: 0.7em;
-      }
-    }
-  }
-
-  @media screen and (max-width: map-get($grid-breakpoints,"md")) {
-    &:before {
-      left: 8%;
-    }
-    timeline-item {
-      ion-card {
-        margin-left: 20% !important;
-      }
-      ion-icon {
-        left: 8%;
-      }
-    }
-  }
-  @media screen and (max-width: map-get($grid-breakpoints, "sm" )) {
-    &:before {
-      left: 12%;
-      width: 3px;
-    }
-    timeline-item {
-      // &:last-child {
-      //   visibility: hidden;
-      // }
-      ion-icon {
-        position: relative;
-        float: left;
-        left: auto;
-        margin: 0 5px 0 20px;
-        width: 30px;
-        height: 30px;
-        line-height: 30px;
-
-        &:after {
-          border-left-color: transparent;
-          border-top-color: #afdcf8;
-          top: 46px;
-          left: 10px;
-        }
-      }
-
-      ion-card {
-        margin-top: 0;
-        box-shadow: none;
-        width: calc(84% - 20px) !important;
-        margin-left: 20% !important;
-
-        ion-card-header {
-          padding-top: 0;
-        }
-      }
-    }
-  }
 }
